2007-07-01  Ben Motmans <ben.motmans@gmail.com>

	* Providers/IDbFactory.cs: Factory class to be implemented by each database provider
	* Codons/DbFactoryCodon.cs: Codon for IDbFactory extensions
	* Providers/DbFactoryService.cs: Service point for DbFactory codons
	* Schema/*: added TODO items

2007-06-27  Ben Motmans  <ben.motmans@gmail.com>

	* Schema/*.cs: constructor with SchemaProvider parameter
	* Schema/*.cs: use of generic collections instead of arrays
	* Providers/ConnectionSettings.cs: database property

2007-06-27  Ben Motmans  <ben.motmans@gmail.com>

	* Providers/AbstractConnectionProvider.cs: abstract connection provider

2007-06-26  Ben Motmans  <ben.motmans@gmail.com>

	* Schema/DataTypeCategory.cs, Schema/DataTypeSchema.cs: added an enumeration to specify the category
	of the data type, this can be used in the future for data migration

2007-06-25  Ben Motmans  <ben.motmans@gmail.com>

	* Schema/TableSchema.cs, Schema/ViewSchema.cs, Schema/ProcedureSchema.cs, Schema/ColumnsSchema.cs,
	Schema/ConstraintSchema.cs: lazy loaded columns, parameters, definition, ... parameters
	* Schema/Range.cs, Schema/DataTypeSchema.cs: length, precision and scale range properties

2007-06-24  Ben Motmans  <ben.motmans@gmail.com>

	* Creation of designer, visualisation and query sub-projects
	* Providers/ConnectionSettings.cs: class to seperate connection settings from the connection provider

2007-06-23  Ben Motmans  <ben.motmans@gmail.com>

	* Providers/IDbProvider.cs: splitted into Providers/ISchemaProvider.cs and Providers/IConnectionProvider.cs
	* Providers/ISchemaProvider.cs: Use of generics where possible and logic
	* Providers/ISchemaProvider.cs: Added GetDatabases method

2007-06-22  Ben Motmans  <ben.motmans@gmail.com>

	* Imported code from MonoQuery

2007-06-01  Jeffrey Stedfast  <fejj@novell.com>

	* Mono.Data.Sql/Makefile.am: Only build the supported database
	providers (based on configure results).

2007-05-11  Lluis Sanchez Gual <lluis@novell.com> 
